--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </section>
 
     <section id="cadastro">
+        <h2 class="cdt">Cadastre-se</h2>
         <div class="cadastro">
-            <h2>Cadastre-se</h2>
             <form>
                 <div>
                     <input type="text" placeholder="Seu nome" required />
